@@ -65,7 +65,7 @@ public class BindingTest {
       return privateIntField;
     }
 
-    public Integer integerField = new Integer(42);
+    public Integer integerField = Integer.valueOf(42);
 
     public Integer integerMethodIsNull() {
       return integerField;
